# pretrain-mm

./: .gitignore  .mise.toml  README.md  pyproject.toml  requirements.txt
configs/: fuyu_config.py  remote-dev.py
scripts/: chopped-model.py  chopped_model.py  create-feedback.py  eval-initial.py  eval-ocrbench.py  eval_initial.py  examine-model.py  hf_release.py  instruct-train.py  m2w_labelboxes.py  measure-model.py  pretrain-task.py  rmeasure.sh  run-slurm.sh  show.py  train-acc.py  train-fsdp.py  train-single-gpu.py  transfer_data.sh  upload.py
scripts/zero/: zero2.json  zero3.json
src/config/: dev_borah.py  dev_eng.py  fuyu.py  mistral.py  model_configs.py  paligemma.py
src/config/dev/: __init__.py  _dev_utils.py  dev_borah.py  dev_eng.py  dev_local.py  local.yaml
src/configs/: fuyu_config.py  gpu-dev.py  local-dev.py
src/configs/dev/: borah-dev.py
src/pretrain_mm/: __init__.py  constants.py  debug.py  image_patches.py  logger.py  model.py  trainer.py  utils.py
src/pretrain_mm/datasets/: __init__.py  base.py  dataloader.py  dataset_utils.py  datasets.py  multipack_sampler.py  pretrain_instructions.py  s3_datasets.py  silatus_websites.py  sql_models.py  supervised_dataset.py  task_adapter.py  usable_tasks.py  webagent_tasks.py
src/pretrain_mm/datasets/common_datasets/: __init__.py  text_datasets.py
src/pretrain_mm/datasets/common_screens/: __init__.py  common_screens_dataset.py  sql_models.py
src/pretrain_mm/datasets/mind2web/: __init__.py  mind2web.py  mind2web_datatypes.py  mind2web_preprocess_data.py  mind2web_processor.py  mind2web_utils.py
src/pretrain_mm/datasets/miniwob/: miniwob_helper.py
src/pretrain_mm/datasets/rico/: rico_datasets.py  rico_utils.py
src/pretrain_mm/datasets/sampler/: batch_sampler.py  multipack_sampler.py  (+1 more)
src/pretrain_mm/distributed/: distributed_utils.py  eval.py  policies.py
src/pretrain_mm/evaluation/: cfid_logits.py
src/pretrain_mm/metrics/: __init__.py  bbox_metric.py  eval_metrics.py  metrics.py  np_metrics.py  tf-metrics.py
src/pretrain_mm/model/: combine_embed.py  input_merger.py  model.py  model_utils.py  modified_mistral.py  tokenizer_base.py  wrapper_patch_train.py
src/pretrain_mm/processesor/: image_patches.py  image_processor.py  image_utils.py  post_processor.py  processor.py
src/pretrain_mm/processor/: image_processor.py  image_processor_helpers.py  image_processor_mixin.py  processor.py  tokenizer_base.py  tokenizer_constants.py  tokenizer_helpers.py
src/pretrain_mm/trainer/: _trainer.py  dpo.py  optim.py  policy_trainer.py  trainer.py  trainer_events.py
src/pretrain_mm/utils/: bbox_utils.py  checkpoint_utils.py  class_utils.py  config_utils.py  constrainer.py  data_utils.py  dev_utils.py  dump_vision_model.py  eval_utils.py  functional_utils.py  generate_utils.py  image_utils.py  json_utils.py  lora_utils.py  ocr_helper.py  testing_utils.py  token_tag_utils.py  transforms.py  upload_utils.py
tests/: image_fixtures.py  test_datasets.py  test_eval.py  test_fuyu_processor.py  test_generate_utils.py  test_image_patches.py  test_image_processor.py  test_model.py  test_processor.py  test_trainer.py
tests/benchmarks/: benchmark_dataholders.py
tests/comparisons/: test_compare_fuyu.py
tests/datasets/: test_common_screens.py  test_dataloader.py  test_mind2web.py  test_silatus_websites.py
tests/fixtures/: common.py  fixture_tools.py  fuyu_fixtures.py  processors.py
tests/mock/: dataset.py  image_info.py  model.py  test_mock.py
tests/models/: test_input_merger.py  test_llava.py  test_mixture_of_depth.py
(+37 files in other folders)
