[project]
    name = "pretrain_mm"
    version = "0.0.0"
    description = ""
    authors = [{ name = "graham", email = "graham.annett@gmail.com" }]
    dependencies = [
        "torch>=2.3.0",
        "pytest>=8.2.0",
        "einops>=0.8.0",
        "torchvision>=0.18.0",
        "simple-parsing>=0.1.4",
        "boto3>=1.28.82",
        "pillow>=10.3.0",
        "numpy>=1.26.4",
    ]
    requires-python = ">=3.11"
    readme = "README.md"
    license = { text = "None" }

[build-system]
    requires = ["pdm-backend"]
    build-backend = "pdm.backend"
[tool.pdm.scripts]
    pretrain_mm = "pretrain_mm.__main__:main"
[tool.ruff]
    line-length = 120


    [tool.ruff.lint]
        select = [
            # Pyflakes
            "F",
            # Pycodestyle
            "E",
            "W",
            # isort
            "I001",
        ]
        # ignore __init__ for import error
        [tool.ruff.lint.per-file-ignores]
            "__init__.py" = ["F401"]

        [tool.ruff.lint.isort]
            # if you use tool.ruff.src it seems to fuck up anything like import datasets, use below instead
            # im not sure what the difference is with known-local-folder
            known-first-party = ["pretrain_mm", "config"]

            # Use a single line between direct and from import.
            # seems better without lines-between-types
            # lines-between-types = 1
            lines-after-imports = 2


